<resources>

    <string name="app_name">SkyseaSDK</string>
    <string name="login_txt_username">账号</string>
    <string name="login_txt_userpwd">密码</string>
    <string name="login_logo">logo</string>
    <string name="login_footer">www.ya247.com</string>
    <string name="login_btn">登&#160;&#160;录</string>
    <string name="register_btn">注&#160;&#160;册</string>
    <string name="toregister_img">toregister</string>
    <string name="register_back">返回</string>
    <string name="register_username">注册账号</string>
    <string name="register_userpwd">密码</string>
    <string name="register_btn_submit">立即注册</string>
    <string name="register_agree_text">点击「立即注册」，代表你已阅读并同意</string>
    <string name="register_agree">ya247平台协议</string>
    <string name="net_error">网络无法连接，请检查网络&#8230;&#8230;&#8230;</string>

    <!-- login msg -->
    <string name="login_null">账号，密码不能为空，请重新输入！</string>
    <string name="login_user_notexist">账号不存在，请检查后重新输入！</string>
    <string name="login_msg_error">账号或密码有误，请重新输入！</string>
    <string name="login_success">登陆成功</string>
    <string name="login_tips_title">提示</string>
    <string name="login_tips_content">正在登陆，请稍后&#8230;&#8230;&#8230;</string>

    <!-- register msg -->
    <string name="register_null">注册账号，密码不能为空，请重新输入！</string>
    <string name="register_success">注册成功，正在跳转页面&#8230;&#8230;&#8230;</string>
    <string name="register_submit">正在提交信息，请稍后&#8230;&#8230;&#8230;</string>
    <string name="register_tips_title">提示</string>

    <!-- mode of payment -->
    <string name="modeofpayment_back">返回</string>
    <string name="modeofpayment_next">支付</string>
    <string name="modeofpayment_title">输入充值信息</string>
    <string name="modeofpayment_select_sum">充值金额：</string>
    <string name="modeofpayment_other">其他金额：</string>
    <string name="modeofpayment_exchange_rate">应得元宝：</string>
    <string name="modeofpayment_way">充值方式：</string>
    <string name="modeofpayment_default">0</string>
    <string name="modeofpayment_loading_orderinfo">正在生成订单信息&#8230;&#8230;&#8230;</string>
    <string name="modeofpayment_tips">提示</string>
    <string name="modeofpayment_check">金额必须为整数并且不能少于10元</string>

    <!-- order info -->
    <string name="orderinfo_title">ya247支付</string>
    <string name="orderinfo_confirm_title">请确认您的订单信息</string>
    <string name="orderinfo_back">返回</string>
    <string name="orderinfo_next">去支付宝付款</string>
    <string name="orderinfo_payment">充值方式：&#160;&#160;</string>
    <string name="orderinfo_ordernum">订单编号：&#160;&#160; </string>
    <string name="orderinfo_username">游戏账号：&#160;&#160;</string>
    <string name="orderinfo_gamename">充值游戏：&#160;&#160; </string>
    <string name="orderinfo_servername">充值区服：&#160;&#160;</string>
    <string name="orderinfo_amount">充值金额：&#160;&#160; </string>
    <string name="orderinfo_default">default.</string>
    <string name="agreement_title">ya247平台协议</string>
    <string name="order_yuan">元</string>

    <!-- spinner -->
    <string name="spinner_amount_prompt">请选择充值金额</string>
    <string name="spinner_payment_prompt">请选择支付方式</string>
    <string name="confirm_install_hint">"安装提示"</string>
    <string name="confirm_install">"为保证您的交易安全，需要您安装支付宝安全支付服务，才能进行付款。\n\n点击确定，立即安装。"</string>
    <string name="Ensure">"确定"</string>
    <string name="Cancel">"取消"</string>
    <string name="check_sign_failed">您的订单信息已被非法篡改。</string>
    <string name="remote_call_failed">Failure calling remote service</string>
    <string name="partnerHint">"partner"</string>
    <string name="sellerHint">"seller"</string>
    <string name="out_trade_noHint">"out_trade_no"</string>
    <string name="subjectHint">"subject"</string>
    <string name="bodyHint">"body"</string>
    <string name="total_feeHint">"total_fee"</string>
    <string name="notify_urlHint">"notify_url"</string>
    <string name="charsetHint">"charset"</string>
    <string name="signTypeHint">"signType"</string>

</resources>
