<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/register_bg"
        android:baselineAligned="false"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/register_navigation"
            android:layout_width="match_parent"
            android:layout_height="40dip"
            android:background="@drawable/navi_title"
            android:gravity="left|center_vertical"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btn_tologin"
                android:layout_width="50dip"
                android:layout_height="30dip"
                android:layout_marginLeft="5dip"
                android:background="@drawable/navi_back_bg"
                android:gravity="right|center_vertical"
                android:paddingRight="4dip"
                android:text="@string/register_back"
                android:textColor="#ffffff" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/l_login_logo"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="5"
            android:gravity="center_vertical|center_horizontal" >

            <ImageView
                android:id="@+id/login_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/logo"
                android:contentDescription="@string/login_logo" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/logininfo"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="@integer/register_info_ll"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/txt_register_username"
                android:layout_width="match_parent"
                android:layout_height="40dip"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:background="@drawable/login_edittext_username"
                android:focusable="true"
                android:hint="@string/register_username"
                android:singleLine="true"
                android:textColorHint="#CCCCCC" >

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/txt_register_userpwd"
                android:layout_width="match_parent"
                android:layout_height="40dip"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:background="@drawable/login_edittext_userpwd"
                android:hint="@string/register_userpwd"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColorHint="#CCCCCC" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="@integer/register_info_bottom"
            android:orientation="vertical" >

            <Button
                android:id="@+id/register_btn"
                android:layout_width="match_parent"
                android:layout_height="40dip"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:background="@drawable/login_btn_bg"
                android:text="@string/register_btn_submit"
                android:textColor="#ffffff" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dip"
                android:text="@string/register_agree_text" />

            <TextView
                android:id="@+id/tv_agree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dip"
                android:text="@string/register_agree"
                android:textColor="#0000cc" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_footer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0"
            android:text="@string/login_footer"
            android:textColor="#666666" />
    </LinearLayout>

</ScrollView>