<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/login_bg"
        android:baselineAligned="false"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/l_login_logo"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="0.5"
            android:gravity="center_vertical|center_horizontal" >

            <ImageView
                android:id="@+id/login_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/logo"
                android:contentDescription="@string/login_logo" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/logininfo"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="0.5"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/txt_login_username"
                android:layout_width="match_parent"
                android:layout_height="40dip"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:background="@drawable/login_edittext_username"
                android:focusable="true"
                android:hint="@string/login_txt_username"
                android:inputType="textNoSuggestions"
                android:singleLine="true"
                android:textColorHint="#CCCCCC" >

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/txt_login_userpwd"
                android:layout_width="match_parent"
                android:layout_height="40dip"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:background="@drawable/login_edittext_userpwd"
                android:hint="@string/login_txt_userpwd"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColorHint="#CCCCCC" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="0.5"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="40dip"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:background="@drawable/login_btn_bg"
                android:text="@string/login_btn"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/btn_toregister"
                android:layout_width="match_parent"
                android:layout_height="40dip"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:layout_marginTop="20dip"
                android:background="@drawable/btn_register_bg"
                android:text="@string/register_btn"
                android:textColor="#afafaf" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_footer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0"
            android:text="@string/login_footer"
            android:textColor="#89D4F4" />
    </LinearLayout>
</ScrollView>