<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/orderinfo_bg"
    android:baselineAligned="false"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/login_navigation"
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:background="@drawable/pay_title"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:text="@string/orderinfo_title"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_orderinfo_back"
            android:layout_width="50dip"
            android:layout_height="30dip"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="5dip"
            android:layout_marginTop="5dip"
            android:background="@drawable/pay_btn_back_bg"
            android:text="@string/orderinfo_back"
            android:textColor="#ffffff" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true" >

        <LinearLayout
            android:id="@+id/orderinfo_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dip"
            android:background="@drawable/orderinfo_detail_bg"
            android:baselineAligned="false"
            android:orientation="vertical"
            android:paddingTop="15dip" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/pay_btn_back"
                android:gravity="center_vertical"
                android:paddingLeft="5dip"
                android:paddingRight="5dip"
                android:text="@string/orderinfo_confirm_title"
                android:textColor="#ffffffff" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dip"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:gravity="right"
                    android:text="@string/orderinfo_payment" />

                <TextView
                    android:id="@+id/tv_orderinfo_payment"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:text="@string/orderinfo_default" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dip"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:gravity="right"
                    android:text="@string/orderinfo_ordernum" />

                <TextView
                    android:id="@+id/tv_orderinfo_num"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:text="B2201310161339081181" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dip"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:gravity="right"
                    android:text="@string/orderinfo_username" />

                <TextView
                    android:id="@+id/tv_orderinfo_username"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:text="@string/orderinfo_default" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dip"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:gravity="right"
                    android:text="@string/orderinfo_gamename" />

                <TextView
                    android:id="@+id/tv_orderinfo_gamaname"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:text="@string/orderinfo_default" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dip"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:gravity="right"
                    android:text="@string/orderinfo_servername" />

                <TextView
                    android:id="@+id/tv_orderinfo_gameservername"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:text="@string/orderinfo_default" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dip"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:gravity="right"
                    android:text="@string/orderinfo_amount" />

                <TextView
                    android:id="@+id/tv_orderinfo_amount"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:text="@string/orderinfo_default" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical|center_horizontal"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/btn_toalipay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_toalipay_bg"
                    android:gravity="center_vertical|center_horizontal"
                    android:paddingLeft="20dip"
                    android:paddingRight="20dip"
                    android:text="@string/orderinfo_next"
                    android:textColor="#ffffff" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>